JIRA fix - N_SE-51795 CheckBox works otsude its area since it overlaps with thumbnail

--- a/src/themes/tizen/common/jquery.mobile.forms.checkboxradio.less
+++ b/src/themes/tizen/common/jquery.mobile.forms.checkboxradio.less
@@ -52,7 +52,7 @@
 	}
 	.ui-btn.ui-btn-icon-left {
 		.ui-btn-inner {
-			min-width: 40*@unit_base; // TODO: check this after layout done.
+			min-width: 10*@unit_base; // TODO: check this after layout done.
 			min-height: @checkbox-radio-all-height;
 			line-height: @checkbox-radio-all-height;
 			padding: 0 16*@unit_base 0 16*@unit_base;
